TimeReport Action buttons  alignment issues
git-svn-id: https://subversion.assembla.com/svn/projectx-0/stable@1893 b02b8b71-e8a6-4a5c-b3be-45d727391186

--- a/Angular4.0/ProjectX/src/css/projectx.css
+++ b/Angular4.0/ProjectX/src/css/projectx.css
@@ -96,7 +96,7 @@ background-color: #237ea7;
 }
 .fielderror {
 	position: relative;margin-top:4px;
-	background: #d50000;
+	background: #f57979;
 	padding:5px;color:#fff;font-size:12px}
 .fielderror:after {
 	bottom: 100%;
@@ -108,7 +108,7 @@ background-color: #237ea7;
 	position: absolute;
 	pointer-events: none;
 	border-color: rgba(213, 0, 0, 0);
-	border-bottom-color: #d50000;
+	border-bottom-color: #f57979;
 	border-width: 5px;
 	margin-left: -5px;
 }
